# plane-plus-sdk-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
mcp_server/: server.py
plane_sdk/: __init__.py  client.py
plane_sdk/resources/: cycles.py  epics.py  intake.py  labels.py  members.py  modules.py  pages.py  projects.py  states.py  work_items.py  workspace_pages.py
